Major cleanup and redesign - Completely removed `Dispatcher` framework - **BREAKING:** Changed signature of `Downloader#download` to include   callback - **BREAKING:** `Parser` is now an interface - **BREAKING:** Changed signature of `Parser#parse` to include callback - **BREAKING:** Module names now use FQDN (e.g. net.miscfolder.bojiti.*) - Added multi-get support to `SPI#getFirst` - Added optimization support: `CharBufferReader` in `core` module - Re-wrote test driver - Began testing DNS lookup validation - `HttpDownloader` now properly logs resolution errors to `System.Logger` - Added new `JSONParser` backed by `gson` - `RedirectionException` now has the ability to store a `Response` - `Response`'s properties are final - use `Response.Builder` to create - `Response.Builder` implements the new `Response.Progress` interface   for easier monitoring - Logging failed lookups in `SPI` is now an easy option - `SPIVisibilityTest` now includes a raw `ServiceLoader` dump - Fixed protocol and whitespace bugs in `TextParser` - `TextParser` now uses `System.Logger`